--- a/style.css
+++ b/style.css
@@ -1,37 +1,41 @@
 body {
-	background-color: #9D9D9D;
-	color: #CDCCCC;	
+	background-color: #202020;
+	color: #CDCCCC;
+	font-family: OpenSansRegular;
 }
 
 #welcome_window {
-	position: fixed;
+	position: absolute;
 	left: 0px;
-	margin: 0;
+	margin-top: -3%;	
 	width: 100%;
 	height: 550px;
-	background-color: #600000;
+	background-color: #B81D18;
 	border-radius: 25px;
 	text-align: center;
-	margin-top: -3%;
+
 }
 
 #welcome_window h2 {
 	padding-top: 2%;
 	margin: 0;
 	font-size: 72px;
-	
-	color: #707070;
+	position: absolute;
+	left: 0;
+	right: 0;
+	color: #B6B6B6;
+	font-family: OpenSansRegular, ;
 }
 
 #welcome_window h2:hover {
-	color: #9D9D9D;
+	color: #B6B6B6;
 }
 
 #day_phrase {
 	display: block;
 	width: 80%;
 	height: 300px;
-	margin: 0 auto 0 auto;
+	margin: 8.5% auto 0 auto;
 }
 
 #day_text {
@@ -39,31 +43,88 @@ body {
 	float: left;
 	width: 80%;
 	font-size: 2em;
+	color: #F0F0F0;
 }
 
 #day_pic img{
 	display: block;
 	float: right;
 	height: 300px;
+	width: 20%;
 }
 
 #go_on {
 	float: right;
-	width: 15%;
+	width: 16%;
 	height: 40px;
-	background-color: #9D9D9D;
+	background-color: #202020;
 	margin-right: 10%;
-	margin-top: 4%;
-	padding-top: 10px
+	margin-top: 3%;
+	padding-top: 9px;
 	text-align: center;
-	color: #600000;
-	font-style: bold;
-	font-size: 18px;
+	color: #B81D18;
+	font-weight: bolder;
+	letter-spacing: 1px;	
+	font-size: 22px;
 	border-radius: 25px;
+}
+
+#go_on:hover {
+	background-color: #B6B6B6
 }
 
 h1 {
 	font-size: 124px;
 	text-align: center;
-	color: pink;
+	color: #B81D18;
+}
+
+#top_menu {	
+	width: 100%;
+	background-color: #202020;
+	height: 130px;
+	position: absolute;
+	top: -250px;
+	left: 0;
+	right: 0;
+}
+
+#top_menu img {
+	float: left;
+	width: 40%;
+	height: 130px;
+	margin-left: 3%;
+	border-radius: 25px;
+}
+
+#top_menu #menu_container {
+	float: right;
+	height: 130px;
+	width: 57%;
+text-align: center;
+}
+
+#top_menu #menu_container ul{
+	padding: 0 auto 0 auto;
+	float: right;
+	text-decoration: none;
+	margin-right: 5%;
+	padding-top: 25px;
+}
+
+#top_menu #menu_container ul li {
+	color: #004687;
+	font-size: 0px;
+	display: inline;
+	margin-left: 15px;
+
+}
+
+a {
+	text-decoration: none;
+
+}
+
+a:visited {
+	color: #004687;
 }
