--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 #welcome_window {
 	position: absolute;
 	left: 0px;
-	margin-top: -3%;	
+	margin-top: 2%;	
 	width: 100%;
 	height: 550px;
 	background-color: #B81D18;
@@ -59,7 +59,7 @@ body {
 	height: 40px;
 	background-color: #202020;
 	margin-right: 10%;
-	margin-top: 3%;
+	margin-top: 0%;
 	padding-top: 9px;
 	text-align: center;
 	color: #B81D18;
@@ -73,10 +73,15 @@ body {
 	background-color: #B6B6B6
 }
 
+#google {
+	
+}
+
 h1 {
 	font-size: 124px;
 	text-align: center;
 	color: #B81D18;
+	position: static;
 }
 
 #top_menu {	
@@ -127,4 +132,30 @@ a {
 
 a:visited {
 	color: #004687;
+}
+
+#container {
+	width: 80%;
+	background-color: #202020;
+	height: 400px;
+}
+
+#left {
+	float: left;
+	width: 10%;
+}
+
+#right {
+	width: 10%;
+	float: right;
+}
+
+#left, #right {
+	background-color: #B81D18;
+}
+
+#container, #left, #right {
+	display: none;
+	margin-top: 180px;
+	height: 400px;
 }
