--- a/style.css
+++ b/style.css
@@ -1,7 +1,45 @@
+@font-face {
+	font-family: OpenSansRegular;
+	src: url('fonts/OpenSans-Regular.ttf');
+}
+
 body {
 	background-color: #202020;
 	color: #CDCCCC;
-	font-family: OpenSansRegular;
+	font-family: Helvetica ,Verdana;
+}
+
+input {
+  display: inline-block;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  padding: 6px 20px;
+  border: none;
+  -webkit-border-radius: 32px / 54px;
+  border-radius: 32px / 54px;
+  font: Helvetica, sans-serif;
+  color: rgba(0,142,198,1);
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  background: rgba(252,252,252,1);
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
+  text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+input:hover {
+  background: rgba(232,249,255,1);
+  -webkit-box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
+  box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
+}
+
+input:focus {
+  background: rgba(255,253,232,1);
 }
 
 #welcome_window {
@@ -24,7 +62,6 @@ body {
 	left: 0;
 	right: 0;
 	color: #B6B6B6;
-	font-family: OpenSansRegular, ;
 }
 
 #welcome_window h2:hover {
@@ -53,13 +90,20 @@ body {
 	width: 20%;
 }
 
+#welcome_buttons {
+	display: inline-block;
+	width: 100%;
+	height: 100px;
+}
+
+
 #go_on {
 	float: right;
 	width: 16%;
 	height: 40px;
 	background-color: #202020;
 	margin-right: 10%;
-	margin-top: 0%;
+	margin-top: 1.5%;
 	padding-top: 9px;
 	text-align: center;
 	color: #B81D18;
@@ -73,9 +117,19 @@ body {
 	background-color: #B6B6B6
 }
 
-#google {
-	
+#web_search {
+	float: left;
+	width: 30%;
+	margin: auto;
 }
+
+#set_as_hp {
+	float: left;
+	width : 10%;
+	height: 25px;
+	background-color: blue;
+}
+
 
 h1 {
 	font-size: 124px;
@@ -137,7 +191,6 @@ a:visited {
 #container {
 	width: 80%;
 	background-color: #202020;
-	height: 400px;
 }
 
 #left {
