--- a/style.css
+++ b/style.css
@@ -9,47 +9,17 @@ body {
 	font-family: Helvetica ,Verdana;
 }
 
-input {
-  display: inline-block;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  padding: 6px 20px;
-  border: none;
-  -webkit-border-radius: 32px / 54px;
-  border-radius: 32px / 54px;
-  font: Helvetica, sans-serif;
-  color: rgba(0,142,198,1);
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  background: rgba(252,252,252,1);
-  -webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
-  text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
-  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-}
-
-input:hover {
-  background: rgba(232,249,255,1);
-  -webkit-box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
-  box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
-}
-
-input:focus {
-  background: rgba(255,253,232,1);
-}
-
 #welcome_window {
 	position: absolute;
-	left: 0px;
-	margin-top: 2%;	
+	left: 0px;	
+	top: 0;
 	width: 100%;
-	height: 550px;
-	background-color: #B81D18;
-	border-radius: 25px;
+	height: 100%;
+	background: no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 	text-align: center;
 
 }
@@ -69,18 +39,19 @@ input:focus {
 }
 
 #day_phrase {
-	display: block;
-	width: 80%;
-	height: 300px;
-	margin: 8.5% auto 0 auto;
+	width: 90%;
+	margin: 10% auto 0 auto;
+	border-radius: 25px;
+	background: rgba(32, 32, 32, 0.6); 
 }
 
 #day_text {
-	padding-top: 5%;
-	float: left;
-	width: 80%;
+	padding: 5%;
+	text-align: center;
+
 	font-size: 2em;
 	color: #F0F0F0;
+
 }
 
 #day_pic img{
@@ -98,29 +69,50 @@ input:focus {
 
 
 #go_on {
-	float: right;
-	width: 16%;
+	position: fixed;
+	bottom: 0px;
+	width: 100%;
 	height: 40px;
 	background-color: #202020;
 	margin-right: 10%;
 	margin-top: 1.5%;
 	padding-top: 9px;
 	text-align: center;
-	color: #B81D18;
+	color: #B6B6B6;
 	font-weight: bolder;
 	letter-spacing: 1px;	
 	font-size: 22px;
-	border-radius: 25px;
 }
 
 #go_on:hover {
-	background-color: #B6B6B6
+	color: #202020;
+	background-color: #B6B6B6;
 }
 
 #web_search {
-	float: left;
-	width: 30%;
-	margin: auto;
+	padding: 50px 0;
+}
+
+#field {
+	background: #FFF;
+	border: 1px solid #CCC;
+	border-radius: 8px 0 0 8px;
+	width: 40%;
+	font-size: 15px;
+	font-weight: bolder;
+	color: #4D90FE;
+	padding: 15px 15px;
+	outline: none;
+}
+
+#submit {
+	background: #4d90fe;
+	border: 1px solid #3079ED;
+	border-radius: 0 8px 8px 0;
+	color: #FFF;
+	font-weight: bold;
+	padding: 15px 30px;
+	outline: none;
 }
 
 #set_as_hp {
